--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 	<!-- Stylesheets
 	============================================= -->
-	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700,800,900|Montserrat:400%2C700%7CAbril+Fatface:400%7CYellowtail:400" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700,800,900|Montserrat:400%2C700%7CAbril+Fatface:400%7CYellowtail:400" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dark.css') }}">
@@ -18,7 +18,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/color.css') }}">
 
-	<!-- SLIDER REVOLUTION 5.x CSS SETTINGS -->
+	<!-- SLIDER 5.x CSS SETTINGS -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/settings.css') }}" media="screen">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/layers.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/navigation.css') }}">
@@ -100,6 +100,7 @@
 					<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu" class="style">
+						
 						<ul>
 							<li><a href="#"><div>Home</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
@@ -113,7 +114,6 @@
 							<li><a href="contact"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
-
 
 					</nav><!-- #primary-menu end -->
 					
@@ -180,7 +180,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Home &nbsp;Buyouts </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Property &nbsp;Buyouts </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -502,9 +502,13 @@
 
 								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(201,5,0);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
 						</li>
+						
 					</ul>
+					
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
+					
 				</div>
+				
 			</div><!-- END SLIDER -->
 
 		</section>
@@ -522,22 +526,21 @@
 	============================================= -->
 	<script src="{{ url_for('static', filename='js/functions.js') }}"></script>
 
-<!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
-<script src="{{ url_for('static', filename='include/rs-plugin/js/jquery.themepunch.tools.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/jquery.themepunch.revolution.min.js') }}"></script>
-<!-- SLIDER REVOLUTION ADDONS  -->
-<script src="{{ url_for('static', filename='include/rs-plugin//js/addons/revolution.addon.revealer.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/addons/revolution.addon.particles.min.js') }}"></script>
-<!-- SLIDER REVOLUTION EXTENSIONS  -->
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.actions.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.carousel.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.kenburn.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.layeranimation.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.migration.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.navigation.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
-<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
+	<!-- SLIDER 5.x SCRIPTS  -->
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/jquery.themepunch.tools.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/jquery.themepunch.revolution.min.js') }}"></script>
+	<!-- SLIDER ADDONS  -->
+	<script src="{{ url_for('static', filename='include/rs-plugin//js/addons/revolution.addon.revealer.min.js') }}"></script>
+	<!-- SLIDER EXTENSIONS  -->
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.actions.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.carousel.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.kenburn.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.layeranimation.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.migration.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.navigation.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
 
 <!-- ADD-ONS JS FILES -->   
 	<script>
@@ -564,7 +567,7 @@
 							size: {value: 2, random: true, min: 0.5, anim: {enable: true, speed: 5, size_min: 1, sync: false}},
 							line_linked: {enable: false, distance: 150, color: "#ffffff", opacity: 0.4, width: 1},
 							move: {enable: true, speed: 2, direction: "none", random: true, min_speed: 1, straight: false, out_mode: "out"}},
-						interactivity: {
+						    interactivity: {
 							events: {onhover: {enable: false, mode: "bubble"}, onclick: {enable: false, mode: "repulse"}},
 							modes: {grab: {distance: 400, line_linked: {opacity: 0.5}}, bubble: {distance: 400, size: 40, opacity: 0.5}, repulse: {distance: 200}}
 						}
@@ -587,7 +590,7 @@
 						keyboardNavigation:"off",
 						keyboard_direction: "horizontal",
 						mouseScrollNavigation:"off",
-						 mouseScrollReverse:"default",
+						mouseScrollReverse:"default",
 						onHoverStop:"off",
 						arrows: {
 							style:"uranus",
@@ -624,8 +627,8 @@
 						type:"scroll",
 						origo:"slidercenter",
 						speed:400,
-					  speedbg:0,
-					  speedls:0,
+					    speedbg:0,
+					    speedls:0,
 						levels:[5,10,15,20,25,30,35,40,45,46,47,48,49,50,51,55],
 					},
 					shadow:0,
@@ -858,10 +861,8 @@
 			});
 		}
 
-			RsParticlesAddOn(revapi109);
-
 			RsRevealerAddOn(tpj, revapi109, "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-1'><div class='rsaddon-revealer-1'><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><\/div><\/div \/>");
-		});	/*ready*/
+		});
 	</script>
 
 </body>
