--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Property &nbsp;Buyouts </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Buyouts </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
