--- a/templates/aboutBU.html
+++ b/templates/aboutBU.html
@@ -32,18 +32,11 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
-	
-	<!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin=""/>
-	
-	<!-- Search CSS -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-houston.css') }}">
+
 
 	<!-- Document Title
 	============================================= -->
-	<title> Neighborhood Listings </title>
+	<title>About</title>
 
 	<style>
 
@@ -111,23 +104,23 @@
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
-					<!-- Primary Navigation
+				<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu" class="style">
+						
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="alerts"><div>Alerts</div></a></li>
 							<li><a href="county"><div>County</div></a></li>
-							<li><a href="#"><div>Neighborhood</div></a></li>
+							<li><a href="neighborhoods"><div>Neighborhoods</div></a></li>
+							<li><a href="faqs"><div>FAQs</div></a></li>
 						</ul>
 
 						<ul>
 							<li><a href="analytics"><div>Analytics</div></a></li>
-							<li><a href="faqs"><div>FAQs</div></a></li>
+							<li><a href="alerts"><div>Alerts</div></a></li>
 							<li><a href="contact"><div>Contact</div></a></li>
-							<li><a href="about"><div>About</div></a></li>
+							<li><a href="#"><div>About</div></a></li>
 						</ul>
-
 
 					</nav><!-- #primary-menu end -->
 
@@ -145,9 +138,9 @@
 				<!-- START REVOLUTION SLIDER 5.4.6 fullscreen mode -->
 				<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.6">
 					<ul>	<!-- SLIDE  -->
-						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+						<li class="dark" data-index="rs-243" data-transition="" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb=""  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -194,7 +187,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Neighborhoods </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> About </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -282,16 +275,13 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					
-					<div id="map-container" position="center">  
-						
-         				<div id="map" align="center"></div>
-						
-					</div>
-					
-					<script type="text/javascript" src="../static/js/config.js"></script>
-      
-    					<script type="text/javascript" src="../static/js/houstonmap.js"></script>
+					<p>
+						About </br>
+
+						The project came about in talks with the Houston Flood Control District to have a more efficient way of identifying new home listings per their buyout program. The main issue they discovered was their lack of resources and inefficiencies in their search of new and upcoming listings. This created a time management issue as there were not enough people to sort through the thousands of listings that also include false positives and true negatives. It also prevented them from keeping consistent track of existing listings within their parameters. </br>
+
+
+					</p>
 
 				</div>
 
@@ -359,20 +349,6 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
-	
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-crossorigin=""></script>
-	
-<!-- d3 JS -->
-<script src="https://d3js.org/d3.v4.min.js"></script>
-	
-<!-- KEY -->
-<script src="{{ url_for('static', filename='js/config.js') }}"></script>
-      
-<!-- HOUSTON MAP JS  -->
-<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script>
 
 <!-- ADD-ONS JS FILES -->   
 <script>
@@ -666,8 +642,11 @@ crossorigin=""></script>
 			window.location.reload();
 		});
 	}
-		
-	});
+		/*
+		RsParticlesAddOn(revapi109);
+
+		RsRevealerAddOn(tpj, revapi109, "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-1'><div class='rsaddon-revealer-1'><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><\/div><\/div \/>");*/
+	});	/*ready*/
 </script>
 
 </body>
