--- a/templates/county.html
+++ b/templates/county.html
@@ -23,9 +23,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/color.css') }}">
 	
+	<!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+	
+	<!-- Search CSS -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-houston.css') }}">
+	
 	<!-- Document Title
 	============================================= -->
-	<title>About</title>
+	<title>Harris County Listings</title>
 
 </head>
 
@@ -85,8 +93,8 @@
 		<section id="page-title" class="page-title-parallax" style="background-image: url("{{ url_for('static', filename='images/page-header-test.jpg') }}"); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
 			<div class="container clearfix">
-				<h1 data-animate="fadeInUp">About</h1>
-				<span data-animate="fadeInUp" data-delay="300">Project Background</span>
+				<h1 data-animate="fadeInUp">Harris County</h1>
+				<span data-animate="fadeInUp" data-delay="300">Newest Listings in County</span>
 			</div>
 
 		</section><!-- #page-title end -->
