--- a/templates/neighborhoods.html
+++ b/templates/neighborhoods.html
@@ -93,7 +93,7 @@
 		<section id="page-title" class="page-title-parallax" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }}); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
 			<div class="container clearfix">
-				<h1 data-animate="fadeInUp">Harris County</h1>
+				<h1 data-animate="fadeInUp">Neighborhoods</h1>
 				<span data-animate="fadeInUp" data-delay="300">Newest Neighborhood Listings</span>
 			</div>
 
