--- a/templates/neighborhoods.html
+++ b/templates/neighborhoods.html
@@ -45,7 +45,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="split-menu transparent-header dark clearfix">
+		<header id="header" class="split-menu clearfix">
 
 			<div id="header-wrap">
 
