--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="transparent-header split-menu">
+		<header id="header" class="split-menu clearfix">
 
 			<div id="header-wrap">
 
