--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -152,6 +152,8 @@
 
 					</div><!-- .postcontent end -->
 					
+					<div class="container clearfix">
+					
 					<!-- Post Content 2
 					============================================= -->
 					<div class="postcontent nobottommargin clearfix">
@@ -205,6 +207,8 @@
 						</div>
 
 					</div><!-- .postcontent end -->
+						
+					</div>
 
 				</div>
 
