--- a/templates/indexBU.html
+++ b/templates/indexBU.html
@@ -186,7 +186,7 @@ body {
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Buyouts </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #fdfdfd; letter-spacing: -5px;font-family:Montserrat;">Buyouts </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -310,7 +310,7 @@ body {
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Analytics</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #fdfdfd; letter-spacing: -5px;font-family:Montserrat;">Analytics</div>
 
 							<!-- LAYER NR. 8 -->
 							<div class="tp-caption  "
@@ -434,7 +434,7 @@ body {
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 600; color: #fdfdfd; letter-spacing: -5px;font-family:Montserrat;">Contacts</div>
 
 							<!-- LAYER NR. 13 -->
 							<div class="tp-caption  "
